CMTYAEM-1746 Limited Access badge bug fix updated spacing

--- a/ui.frontend/src/main/webpack/components/limitedaccess/scss/styles/_default.scss
+++ b/ui.frontend/src/main/webpack/components/limitedaccess/scss/styles/_default.scss
@@ -12,7 +12,7 @@
         &::after {
             content: url('../resources/images/limited-access-icon.svg');
             vertical-align: top;
-            margin-left: 6px;
+            margin-left: 5px;
         }
     }
 
